...
      )

      Divider()

      // About section
      Card(
        modifier = Modifier.fillMaxWidth().testTag("about_section_card"),
        colors =
          CardDefaults.cardColors(
            containerColor = DarkNavy.darken(0.3f) // MaterialTheme.colorScheme.surface
          )
      ) {
        Column(modifier = Modifier.padding(16.dp)) {
...
